--- a/myhome/src/main/resources/application.properties
+++ b/myhome/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Mysql연결
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC
