--- a/myhome/src/main/resources/application.properties
+++ b/myhome/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC
 spring.datasource.username=test
 spring.datasource.password=test
-
+# 로그 표시
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
 
