--- a/myhome/src/main/resources/application.properties
+++ b/myhome/src/main/resources/application.properties
@@ -8,5 +8,7 @@ spring.datasource.password=test
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+spring.jpa.show-sql=true
+
 
 
