--- a/myhome/src/main/resources/application.properties
+++ b/myhome/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Mysql연결
+# mySQL 연결
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC
@@ -7,7 +7,7 @@ spring.datasource.password=test
 # 로그 표시
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
+# 로그 정리
 spring.jpa.show-sql=true
 
 
